[workspace]
members = ["crates/prover"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"

[workspace.dependencies]
blake2 = "0.10.6"
blake3 = "1.5.0"
educe = "0.5.0"
hex = "0.4.3"
itertools = "0.12.0"
num-traits = "0.2.17"
thiserror = "1.0.56"
bytemuck = "1.14.3"
tracing = "0.1.40"
# TODO: Use version "0.8.0" as soon as it's available
tracing-profile = { git = "https://gitlab.com/IrreducibleOSS/tracing-profile.git", branch = "main" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.bench]
codegen-units = 1
lto = true
